[package]
name = "ALPack"
version = "3.0.0"
edition = "2024"

[dependencies]
pico-args = { version = "0.5" }
ureq = { version = "3.0", features = ["charset"] }
scraper = { version = "0.23" }
regex = { version = "1.11" }
indicatif = {  version = "0.18" }
flate2 = { version = "1.1" }
tar = { version = "0.4" }
serde = { version = "1", features = ["derive"] }
toml = {  version = "0.9" }
walkdir = {  version = "2.5" }

[profile.release]
opt-level = "z"
panic = "abort"
codegen-units = 1
lto = true
strip = true
debug = false
